# public-achievements

./: Cargo.toml  README.md  canister_ids.json  dfx.json  generate_candid.sh  package-lock.json
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/achievement/: all.html  fn.get_candid_pointer.html  index.html  sidebar-items.js
doc/achievement/access/: fn.caller.html  fn.is_controller.html  index.html
doc/achievement/ecdsa/: fn.always_fail.html  fn.build_principals_message.html  fn.public_key.html  fn.sign.html  fn.verify.html  index.html  sidebar-items.js  struct.PublicKeyReply.html  struct.SignatureReply.html  struct.SignatureVerificationReply.html  type.CanisterId.html
doc/achievement/logic/: index.html
doc/achievement/state/: constant.MEMORY_MANAGER.html  constant.METADATA.html  constant.PRINCIPAL_TO_ACHIEVEMENT_STATUS.html  constant.PRINCIPAL_TO_HASH.html  fn._update_canister_metadata.html  fn.get_achievement_metadata.html  fn.get_principal_to_achievement_status_value.html  fn.get_principal_to_hash_value.html  fn.update_principal_to_hash.html  (+4 more)
doc/reputation_module/: all.html  fn.get_candid_pointer.html  index.html  sidebar-items.js
src/achievement/: Cargo.toml  README.md  achievement.did
src/achievement/src/: access.rs  ecdsa.rs  lib.rs  logic.rs  state.rs  storable.rs
src/achievement/src/ecdsa/: mod.rs
src/achievement/src/storable/: mod.rs
src/achievement_collection/: Cargo.toml
src/reputation_module/: Cargo.toml  README.md  reputation_module.did
test/: configurate_upas.sh  icrc-7_configurate.sh  issue_achievement.sh
(+150 files in other folders)
