[package]
name = "achievement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4.3"
ic-cdk = "0.13"
ic-stable-structures = "0.6.4"
k256 = { version = "0.12.0", features = ["ecdsa"] }
serde = "1.0.203"
sha2 = "0.10.8"
